--- a/source/_posts/文档/tool.html
+++ b/source/_posts/文档/tool.html
@@ -1,8 +1,11 @@
 ---
 title: tool.html
-date: 2022-02-28 19:57:47
-tags: [编程,感悟]
+tags:
+  - 编程
+  - 感悟
 categories: 技术
+abbrlink: 78971d1
+date: 2022-02-28 19:57:47
 ---
 <!doctype html>
 <html>
