--- a/source/_posts/文档/常用工具.html
+++ b/source/_posts/文档/常用工具.html
@@ -1,8 +1,11 @@
 ---
 title: 常用工具.html
-date: 2022-02-28 19:57:47
-tags: [编程,感悟]
+tags:
+  - 编程
+  - 感悟
 categories: 技术
+abbrlink: 625ce9d3
+date: 2022-02-28 19:57:47
 ---
 <!doctype html>
 <html>
