--- a/source/_posts/git/git.html
+++ b/source/_posts/git/git.html
@@ -1,8 +1,10 @@
 ---
 title: git.html
-date: 2022-02-28 19:57:47
-tags: [git]
+tags:
+  - git
 categories: 技术
+abbrlink: 765d86b6
+date: 2022-02-28 19:57:47
 ---
 <!doctype html>
 <html>
